all responsive elements implemented, BUT will not shrink below 423px.

--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
           <h1>Tortoiseshell Optics</h1>
         </div>
         <nav class="header_right">
-          <h1>Services</h1>
-          <h1>Product</h1>
-          <h1>Contact</h1>
+          <h1 class="notmobilenav">Services</h1>
+          <h1 class="notmobilenav">Product</h1>
+          <h1 class="notmobilenav">Contact</h1>
+          <h1 class="mobilenav">Menu</h1>
         </nav>
       </header>
     </div>
@@ -32,14 +33,14 @@
         <img src="resources\images\paper-icon.png" alt="paper">
         <div class="caption">
           <h3>Comprehensive</h3>
-          <h3>Exams</h3>
+          <h3 class="bottomcaption">Exams</h3>
         </div>
       </div>
       <div class="ruler pic">
         <img src="resources\images\ruler-icon.png" alt="ruler">
         <div class="caption">
           <h3>Custom</h3>
-          <h3>Fittings</h3>
+          <h3 class="bottomcaption">Fittings</h3>
         </div>
       </div>
       <div class="truck pic">
